--- a/demos/ValidableResultSamples/ValidableResultSamples.csproj
+++ b/demos/ValidableResultSamples/ValidableResultSamples.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="RoyalCode.OperationResult" Version="$(OpReVer)" />
 	</ItemGroup>
 
