For Controllers docs created.

--- a/demos/OperationResultSamples/OperationResultSamples.csproj
+++ b/demos/OperationResultSamples/OperationResultSamples.csproj
@@ -10,6 +10,7 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="RoyalCode.OperationResult" Version="$(OpReVer)" />
+		<PackageReference Include="RoyalCode.OperationResult.MvcResults" Version="$(OpReVer)" />
 	</ItemGroup>
 
 </Project>
