--- a/src/libs.targets
+++ b/src/libs.targets
@@ -1,6 +1,9 @@
 <Project>
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.1;net6;net7;net8</TargetFrameworks>
+		
+		<!-- when target is netstandard2.1 then remove waring cs8604 -->
+		<NoWarn Condition=" '$(TargetFramework)' == 'netstandard2.1' ">$(NoWarn);CS8604;CS8602</NoWarn>
 	</PropertyGroup>
 	<Import Project=".\base.targets" />
 </Project>
